--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,5 +5,8 @@ sonar.projectName=ci-cd-demo
 sonar.projectVersion=1.0
 
 sonar.sources=.
+sonar.exclusions=tests/**
+
 sonar.tests=tests
+sonar.test.inclusions=tests/**/*.py
 sonar.python.coverage.reportPaths=coverage.xml
