--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectName=ci-cd-demo
 sonar.projectVersion=1.0
 
 sonar.sources=.
-sonar.exclusions=tests/**
+sonar.exclusions=tests/**,.github/workflows/**
 
 sonar.tests=tests
 sonar.test.inclusions=tests/**/*.py
